--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,8 +11,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 2, 6, 23;
-    --background-end-rgb: 2, 6, 23;
+    --background-start-rgb: 76,175, 80;
+    --background-end-rgb: 76,175, 80;
   }
 }
 
